public/auth.css
/*GENERAL STYLES*/
* {
  padding: 0;
  box-sizing: border-box;
}
body {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  font-family: "Roboto", sans-serif;
  font-size: 14px;
  color: #fff;
  background: #0e1515;
  overflow: hidden;
}

.container {
  max-width: 500px;
  width: 100%;
  margin-bottom: 30px;
}
/*SIGN-UP STYLES*/
.signup-form {
  padding: 0px;
  margin: 50px 0 0 0;
  display: flex;
  justify-content: center;
  z-index: 5;
  position: relative;
}
.form-title {
  text-transform: capitalize;
  font-size: 2em;
  text-align: center;
}
/*Fieldset styles*/
.fieldset {
  border: none;
  margin: 0 0 10px;
}
/*SIGN-UP INPUT STYLES*/
.signup-form-input {
  width: 100%;
  border: 1px solid transparent;
  background: #efeaea;
  outline: 0;
  text-align: center;
  font-size: 16px;
  padding: 10px 30px;
  border-radius: 5px;
  margin: 2px 0px;
}
.signup-form-input:hover {
  background-color: rgb(253 252 252);
}
/*SIGN IN STYLES*/
.signin-link {
  text-decoration: solid;
  color: #fff;
  background: green;
  padding: 6px 15px;
  border-radius: 25px;
  transition: background-color 0.5s ease;
}
.signin-link:hover {
  background: #50a3a2;
}
/*BUTTON STYLES*/
.btn {
  cursor: pointer;
  width: 100%;
  border: none;
  background: #084e9e;
  color: #fff;
  padding: 15px;
  font-size: 16px;
  border-radius: 25px;
  text-align: center;
  transition: background-color 0.5s ease;
}
.btn:hover {
  background: #50a3a2;
}
.dropdown-content {
  width: 100%;
  border: 1px solid #ccc;
  background: rgb(255, 255, 255);
  margin: 0 0 5px;
  padding: 10px;
}
/*BACKGROUND BUBBLES STYLES*/
.bg-bubbles {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}
.bg-bubbles li {
  position: absolute;
  list-style: none;
  display: block;
  width: 40px;
  height: 40px;
  background-color: #50a3a2;
  bottom: -160px;

  -webkit-animation: square 25s infinite;
  animation: square 25s infinite;

  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
}
.bg-bubbles li:nth-child(1) {
  left: 10%;
}

.bg-bubbles li:nth-child(2) {
  left: 20%;

  width: 80px;
  height: 80px;

  animation-delay: 2s;
  animation-duration: 17s;
}

.bg-bubbles li:nth-child(3) {
  left: 25%;
  animation-delay: 4s;
}

.bg-bubbles li:nth-child(4) {
  left: 40%;
  width: 60px;
  height: 60px;

  animation-duration: 22s;

  background-color: #50a3a269;
}

.bg-bubbles li:nth-child(5) {
  left: 70%;
}

.bg-bubbles li:nth-child(6) {
  left: 75%;
  width: 120px;
  height: 120px;

  animation-delay: 3s;
  background-color: #50a3a269;
}

.bg-bubbles li:nth-child(7) {
  left: 32%;
  width: 160px;
  height: 160px;

  animation-delay: 7s;
  background-color: #50a3a287;
}

.bg-bubbles li:nth-child(8) {
  left: 55%;
  width: 20px;
  height: 20px;

  animation-delay: 15s;
  animation-duration: 40s;
}

.bg-bubbles li:nth-child(9) {
  left: 25%;
  width: 10px;
  height: 10px;

  animation-delay: 2s;
  animation-duration: 40s;
  background-color: #50a3a269;
}

.bg-bubbles li:nth-child(10) {
  left: 60%;
  width: 160px;
  height: 160px;

  animation-delay: 11s;
}

@-webkit-keyframes square {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-1700px) rotate(600deg);
  }
}
@keyframes square {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-1700px) rotate(600deg);
  }
}
.footer-container {
  position: absolute;
  width: 100%;
  height: 65px;
  background: #464545;
  display: flex;
  justify-content: center;
  bottom: 0px;
  z-index: 5;
}
.links-container {
  position: relative;
  width: 300px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  font-size: 16px;
}
.links-container a {
  text-decoration: none;
  color: #fff;
}
.github-logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 1px;
}
.github-logo {
  background: url("./GitHub-Mark-Light-32px.png");
  width: 32px;
  height: 32px;
  margin-left: 10px;
  color: #fff;
  margin-bottom: 2px;
}
.legend {
  visibility: hidden;
}

